--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -55,16 +55,28 @@
             </objects>
             <point key="canvasLocation" x="644" y="135"/>
         </scene>
-        <!--View Controller-->
+        <!--Map Controller-->
         <scene sceneID="UrW-Dy-XuW">
             <objects>
-                <viewController id="DfR-QA-RQE" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="esN-IF-dA8">
+                <viewController id="DfR-QA-RQE" customClass="TIMapController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="esN-IF-dA8" customClass="TI">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <mapView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="Dhm-gW-SD5"/>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Dhm-gW-SD5" firstAttribute="trailing" secondItem="esN-IF-dA8" secondAttribute="trailing" type="default" id="Deo-fv-01a"/>
+                            <constraint firstItem="Dhm-gW-SD5" firstAttribute="top" secondItem="esN-IF-dA8" secondAttribute="top" type="default" id="K6L-0w-bbw"/>
+                            <constraint firstItem="Dhm-gW-SD5" firstAttribute="leading" secondItem="esN-IF-dA8" secondAttribute="leading" type="default" id="TAU-pP-i4d"/>
+                            <constraint firstItem="Dhm-gW-SD5" firstAttribute="bottom" secondItem="esN-IF-dA8" secondAttribute="bottom" type="default" id="nCK-zG-97y"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3R5-xu-eeo"/>
+                    <connections>
+                        <outlet property="map" destination="Dhm-gW-SD5" id="0Ua-Qe-fod"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TMN-0d-TOD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -103,6 +115,17 @@
             <point key="canvasLocation" x="271" y="135"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="TIMapController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TIMapController.h"/>
+        </class>
+        <class className="TIViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TIViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
