--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2818" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="D4F-cQ-rtK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2809" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="D4F-cQ-rtK">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1900"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1884"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -82,15 +82,64 @@
             </objects>
             <point key="canvasLocation" x="1219" y="339"/>
         </scene>
-        <!--View Controller-->
+        <!--Camera Controller View Controller-->
         <scene sceneID="wri-nr-azB">
             <objects>
-                <viewController id="nRo-Ag-cvh" sceneMemberID="viewController">
+                <viewController id="nRo-Ag-cvh" customClass="TICameraControllerViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PDK-Dl-8FF">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView translatesAutoresizingMaskIntoConstraints="NO" userInteractionEnabled="NO" contentMode="scaleToFill" id="7YC-fh-msm">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="399" id="Ygt-lE-vwg"/>
+                                </constraints>
+                            </imageView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="66L-R5-XPG">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="uYV-fz-lmX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="NOPE">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="RetakeImage:" destination="nRo-Ag-cvh" eventType="touchUpInside" id="5m1-UR-DrC"/>
+                                </connections>
+                            </button>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="cyn-Qi-NKX">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="HELL YEA">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="AcceptImage:" destination="nRo-Ag-cvh" eventType="touchUpInside" id="pfU-nA-Dc0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="66L-R5-XPG" firstAttribute="top" secondItem="7YC-fh-msm" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1Zh-Zp-aDR"/>
+                            <constraint firstItem="66L-R5-XPG" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" constant="71" id="Mc0-KK-EoQ"/>
+                            <constraint firstItem="7YC-fh-msm" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" type="default" id="MzX-n0-Q69"/>
+                            <constraint firstItem="cyn-Qi-NKX" firstAttribute="leading" secondItem="66L-R5-XPG" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Oxo-LN-gAz"/>
+                            <constraint firstItem="7YC-fh-msm" firstAttribute="top" secondItem="PDK-Dl-8FF" secondAttribute="top" type="default" id="c8O-aR-7NC"/>
+                            <constraint firstItem="7YC-fh-msm" firstAttribute="trailing" secondItem="PDK-Dl-8FF" secondAttribute="trailing" type="default" id="dWg-Ya-p2C"/>
+                            <constraint firstItem="cyn-Qi-NKX" firstAttribute="baseline" secondItem="66L-R5-XPG" secondAttribute="baseline" type="default" id="u95-7p-a68"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ImageView" destination="7YC-fh-msm" id="AJm-h5-lGG"/>
+                        <outlet property="RetakeImage" destination="66L-R5-XPG" id="0ge-Ee-gKR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RzB-JA-Iqs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -119,8 +168,19 @@
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
         </class>
+        <class className="TICameraControllerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TICameraControllerViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="AcceptImage:"/>
+                <relationship kind="action" name="RetakeImage:"/>
+                <relationship kind="outlet" name="ImageView" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
         <class className="TIMapController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TIMapController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="map" candidateClass="MKMapView"/>
+            </relationships>
         </class>
         <class className="TIViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TIViewController.h"/>
