--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2809" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="D4F-cQ-rtK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2818" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="D4F-cQ-rtK">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1884"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1900"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -108,7 +108,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="RetakeImage:" destination="nRo-Ag-cvh" eventType="touchUpInside" id="5m1-UR-DrC"/>
+                                    <action selector="retakeImage:" destination="nRo-Ag-cvh" eventType="touchUpInside" id="1PG-ny-dTQ"/>
                                 </connections>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" hasAttributedTitle="NO" lineBreakMode="middleTruncation" id="cyn-Qi-NKX">
@@ -121,29 +121,79 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="AcceptImage:" destination="nRo-Ag-cvh" eventType="touchUpInside" id="pfU-nA-Dc0"/>
+                                    <segue destination="ULu-Jz-xq2" kind="modal" modalTransitionStyle="flipHorizontal" id="OEx-bj-l9h"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="66L-R5-XPG" firstAttribute="top" secondItem="7YC-fh-msm" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1Zh-Zp-aDR"/>
-                            <constraint firstItem="66L-R5-XPG" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" constant="71" id="Mc0-KK-EoQ"/>
                             <constraint firstItem="7YC-fh-msm" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" type="default" id="MzX-n0-Q69"/>
-                            <constraint firstItem="cyn-Qi-NKX" firstAttribute="leading" secondItem="66L-R5-XPG" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Oxo-LN-gAz"/>
+                            <constraint firstItem="66L-R5-XPG" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" constant="61" id="YFb-ml-HpW"/>
                             <constraint firstItem="7YC-fh-msm" firstAttribute="top" secondItem="PDK-Dl-8FF" secondAttribute="top" type="default" id="c8O-aR-7NC"/>
                             <constraint firstItem="7YC-fh-msm" firstAttribute="trailing" secondItem="PDK-Dl-8FF" secondAttribute="trailing" type="default" id="dWg-Ya-p2C"/>
+                            <constraint firstItem="cyn-Qi-NKX" firstAttribute="leading" secondItem="PDK-Dl-8FF" secondAttribute="leading" constant="151" id="hal-Sy-RC0"/>
                             <constraint firstItem="cyn-Qi-NKX" firstAttribute="baseline" secondItem="66L-R5-XPG" secondAttribute="baseline" type="default" id="u95-7p-a68"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="ImageView" destination="7YC-fh-msm" id="AJm-h5-lGG"/>
-                        <outlet property="RetakeImage" destination="66L-R5-XPG" id="0ge-Ee-gKR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RzB-JA-Iqs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1219" y="-261"/>
+        </scene>
+        <!--Camera Controller View Controller-->
+        <scene sceneID="NzB-yC-Uhc">
+            <objects>
+                <viewController id="ULu-Jz-xq2" customClass="TICameraControllerViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Se3-09-L0O">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="title" minimumFontSize="17" text="" id="Bxl-at-bJ2">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="at6-8o-lhD"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <connections>
+                                    <action selector="textComplete:" destination="ULu-Jz-xq2" eventType="editingDidEndOnExit" id="ntb-iM-X2q"/>
+                                    <outlet property="delegate" destination="ULu-Jz-xq2" id="9n0-7g-tZV"/>
+                                </connections>
+                            </textField>
+                            <textView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="e6b-xq-lp0">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Vkv-jG-bH6"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ULu-Jz-xq2" id="McP-MU-FGp"/>
+                                </connections>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bxl-at-bJ2" firstAttribute="leading" secondItem="Se3-09-L0O" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="5YY-dm-ooJ"/>
+                            <constraint firstItem="Bxl-at-bJ2" firstAttribute="top" secondItem="Se3-09-L0O" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Vqc-Zi-s9w"/>
+                            <constraint firstAttribute="trailing" secondItem="e6b-xq-lp0" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="eI9-gQ-kDA"/>
+                            <constraint firstItem="e6b-xq-lp0" firstAttribute="leading" secondItem="Se3-09-L0O" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="p9I-rb-3SY"/>
+                            <constraint firstItem="e6b-xq-lp0" firstAttribute="top" secondItem="Se3-09-L0O" secondAttribute="top" constant="68" id="tsf-PW-u3w"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="detailsField" destination="e6b-xq-lp0" id="zG3-C5-xyb"/>
+                        <outlet property="titleField" destination="Bxl-at-bJ2" id="jZ3-m4-wEh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="psn-H0-eTL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1699" y="-261"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oK3-VS-2QZ">
@@ -171,9 +221,11 @@
         <class className="TICameraControllerViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/TICameraControllerViewController.h"/>
             <relationships>
-                <relationship kind="action" name="AcceptImage:"/>
-                <relationship kind="action" name="RetakeImage:"/>
+                <relationship kind="action" name="retakeImage:"/>
+                <relationship kind="action" name="textComplete:"/>
                 <relationship kind="outlet" name="ImageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="detailsField" candidateClass="UITextView"/>
+                <relationship kind="outlet" name="titleField" candidateClass="UITextField"/>
             </relationships>
         </class>
         <class className="TIMapController" superclassName="UIViewController">
