Map now resizes to distance between points

--- a/TourIt/en.lproj/MainStoryboard.storyboard
+++ b/TourIt/en.lproj/MainStoryboard.storyboard
@@ -63,7 +63,11 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="Dhm-gW-SD5"/>
+                            <mapView translatesAutoresizingMaskIntoConstraints="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="Dhm-gW-SD5">
+                                <connections>
+                                    <outlet property="delegate" destination="DfR-QA-RQE" id="hGD-dc-EsY"/>
+                                </connections>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
